--- a/Capstone Project - Gerry Fernando.ipynb
+++ b/Capstone Project - Gerry Fernando.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Markdown Project Notebook - Gerry Fernando"
+    "### this notebook will be mainly used for the capstone project."
    ]
   },
   {
