--- a/Report.ipynb
+++ b/Report.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "If they want to open the branch in the same city or country, maybe they still can review the place by themselves. However, if they want to open the branch in another country, it will become more troublesome. For example, in this case is How do coffee shop owners in New York find the right location to open a branch in Toronto?\n",
     "\n",
-    "In this capstone project, I will try to use data science to overcome this problem. I would like to use the data to find the best location to open a new branch of the coffee shop in another country. This project will find out where is the similar location with the previous one and also the most common venue in that location to make sure the coffee shop doesn't have many competitors in the new place. The audience of this project will mainly be entrepreneurs.\n"
+    "In this capstone project, I will try to use data science to overcome this problem. I would like to use the data to find the best location to open a new branch of the coffee shop in another country. This project will find out where is the similar location with the previous one and also the most common venue in that location to make sure the coffee shop doesn't have many competitors in the new place. The audience of this project will mainly be entrepreneurs. All of these data is what we need to solve the problem to find the best location to open the new branch of the coffee shop.\n"
    ]
   },
   {
