--- a/Report.ipynb
+++ b/Report.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "If they want to open the branch in the same city or country, maybe they still can review the place by themselves. However, if they want to open the branch in another country, it will become more troublesome. For example, in this case is How do coffee shop owners in New York find the right location to open a branch in Toronto?\n",
     "\n",
-    "In this capstone project, I will try to use data science to overcome this problem. I would like to use the data to find the best location to open a new branch of the coffee shop in another country. This project will find out where is the similar location with the previous one and also the most common venue in that location to make sure the coffee shop doesn't have many competitors in the new place. The audience of this project will mainly be entrepreneurs. All of these data is what we need to solve the problem to find the best location to open the new branch of the coffee shop.\n"
+    "In this capstone project, I will try to use data science to overcome this problem. I would like to use the data to find the best location to open a new branch of the coffee shop in another country. This project will find out where is the similar location with the previous one and also the most common venue in that location to make sure the coffee shop doesn't have many competitors in the new place. The audience of this project will mainly be entrepreneurs.\n"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this project, I will be using one of the coffee shops in New York, that is For Five Coffee Shop, and then the data location in Toronto. I use the coffee shops data to find its latitude and longitude location, then find the environment (10 most common venues) on that location. Then, I will extract and use the Toronto neighbourhood data location to find 10 most common venues in each neighbourhood. After that, I will cluster the Toronto neighbourhood data with the coffee shop data and see in which cluster is the coffee shop will enter. After find the cluster, I will find the location which doesn’t have café or coffees shop to find the best location."
+    "In this project, I will be using one of the coffee shops in New York, that is For Five Coffee Shop, and then the data location in Toronto. I use the coffee shops data to find its latitude and longitude location, then find the environment (10 most common venues) on that location. Then, I will extract and use the Toronto neighbourhood data location to find 10 most common venues in each neighbourhood. After that, I will cluster the Toronto neighbourhood data with the coffee shop data and see in which cluster is the coffee shop will enter. After find the cluster, I will find the location which doesn’t have café or coffees shop to find the best location. All of these data is what we need to solve the problem to find the best location to open the new branch of the coffee shop"
    ]
   },
   {
